# glida

./: Cargo.toml  README.md  build.sh
media/: demo.mov
src/: main.rs
src/static/: help.txt
src/subc/: help.rs
src/utils/: arg.rs
